plugs away at styling navbar

--- a/index.html
+++ b/index.html
@@ -42,17 +42,70 @@
       <article id="usefulinfo">
         <section id="arrivalinfo" class="checklist">
           <h2>Arrival Information</h2>
+          <ul>
+            <li><strong>Check-in&#58;</strong> 3:00 PM</li>
+            <li><strong>Check-out&#58;</strong> 11:00 AM</li>
+            <li><strong>Parking:</strong> Self-parking in the underground garage is ￡15 per day and valet-parking is ￡50 per day.</li>
+            <li><strong>Airport Shuttle:</strong> Our complimentary airport shuttles leave every hour on the hour, and make trips to Heathrow and Gatwick airports.</li>
+            <li><strong>Trains:</strong> The nearest Underground station is at Leicester Square.</li>
+            <li><strong>Pet Policy:</strong> Pets of all sizes and types are allowed in designated pet rooms, and the specified common areas. Service animals are allowed everywhere.</li>
+          </ul>
+        </section>
+        <section id="services" class="checklist">
+          <h2>Services and Amenities</h2>
+          <p>Our services and amenities are designed to make your travel easy, your stay comfortable, and your experience one-of-a-kind.</p></p>
+          <ul>
+            <li>
+              <Indoor>pool</Indoor>
+            </li>
+            <li>
+              <24-hour>fitness center</24-hour>
+            </li>
+            <li>
+              <Massage>therapy</Massage>
+            </li>
+            <li>
+              <Full>service spa</Full>
+            </li>
+            <li>
+              <In-room>jacuzzi tubs</In-room>
+            </li>
+            <li>
+              <Rooftop>café  &amp; smoothie bar</Rooftop>
+            </li>
+            <li>
+              <Coffee>bar  &amp; pastry shop</Coffee>
+            </li>
+            <li>
+              <Traditional>continental breakfast</Traditional>
+            </li>
+            <li>
+              <24-hour>concierge service</24-hour>
+            </li>
+            <li>
+              <Business>center</Business>
+            </li>
+            <li>
+              <Complimentary>wireless service</Complimentary>
+            </li>
+            <li>
+              <Laundry>&amp; dry cleaning service</Laundry>
+            </li>
+            <li>
+              <Daily>paper</Daily>
+            </li>
+            <li>
+              <Certified>"green" hotel</Certified>
+            </li>
+            <li>
+              <Pet-friendly>rooms  &amp; common areas</Pet-friendly>
+            </li>
+          </ul>
           <ul></ul>
-          <li><strong>Check-in&#58;</strong> 3:00 PM</li>
-          <li><strong>Check-out&#58;</strong> 11:00 AM</li>
-          <li><strong>Parking:</strong> Self-parking in the underground garage is ￡15 per day and valet-parking is ￡50 per day.</li>
-          <li><strong>Airport Shuttle:</strong> Our complimentary airport shuttles leave every hour on the hour, and make trips to Heathrow and Gatwick airports.</li>
-          <li><strong>Trains:</strong> The nearest Underground station is at Leicester Square.</li>
-          <li><strong>Pet Policy:</strong> Pets of all sizes and types are allowed in designated pet rooms, and the specified common areas. Service animals are allowed everywhere.</li>
         </section>
         <section id="accessibility" class="checklist">
-          <h2>Services and Amenities</h2>
-          <p>Our services and amenities are designed to make your travel easy, your stay comfortable, and your experience one-of-a-kind.</p>
+          <h2>Accessibility</h2>
+          <p>We're committed to maintaining the same quality of service for every individual. We offer the following facilities for those with special needs:</p>
           <ul>
             <li>
               <Grab>bars on tub walls</Grab>
