styles #useful info with ray vl's help

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <h1>Essential Info</h1>
       </article>
       <article id="usefulinfo">
-        <section id="arrivalinfo" class="checklist">
+        <section id="arrivalinfo">
           <h2>Arrival Information</h2>
           <ul>
             <li><strong>Check-in&#58;</strong> 3:00 PM</li>
